# Taida

./: .gitignore.swp  CMakeLists.txt  README.md
demos/audio_player/: CMakeLists.txt
demos/audio_player/assets/: license.txt
demos/audio_player/src/: main.c
demos/draw_rectangle/: CMakeLists.txt
demos/draw_rectangle/src/: main.c
demos/open_window/: CMakeLists.txt
demos/open_window/src/: main.c
ext/glad/: CMakeLists.txt
ext/lua/: CMakeLists.txt
ext/openal-soft/: CMakeLists.txt
include/: taida.h
include/Taida/: Graphics.h  System.h  Window.h  audio.h  taida.h
include/Taida/Graphics/: primitives.h
include/Taida/System/: core.h
include/Taida/Window/: window.h
include/Taida/utils/: core.h  log.h
include/utils/: logmsg.h
src/: taida.c
src/Taida/: CMakeLists.txt  audio.c  taida.c
src/Taida/Graphics/: CMakeLists.txt  primitives.c
src/Taida/System/: CMakeLists.txt  log.c
src/Taida/Window/: CMakeLists.txt  window.c
src/Taida/utils/: .log.c.swp  log.c
src/utils/: logmsg.c
